--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,25 @@ artifacts {
     archives sourcesJar
     archives shadowJar
 }
+
+publishing {
+    repositories {
+        maven {
+            name = "JourneyMap"
+            url = uri("https://jm.gserv.me/repository/maven-snapshots/")
+
+            credentials {
+                username = project.findProperty("journeymap.user") ?: System.getenv("JOURNEYMAP_USER")
+                password = project.findProperty("journeymap.password") ?: System.getenv("JOURNEYMAP_PASSWORD")
+            }
+
+            version = project.release
+        }
+    }
+
+    publications {
+        maven(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
