--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 }
 
 shadowJar {
-    relocate 'org', 'info.journeymap.shaded.org'
+    relocate 'org.jetbrains.kotlin', 'info.journeymap.shaded.org.jetbrains.kotlin'
     relocate 'kotlin', 'info.journeymap.shaded.kotlin'
 }
 
