--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Set up Java
-        uses: actions/setup-java@v1.0.0
+        uses: actions/setup-java@v1
 
         with:
-          version: 1.12
+          java-version: 1.12
 
       - name: Gradle Build
         run: sh gradlew build
